--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <title>Personal Portfolio</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         <style>
-            @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
-
 *{
   box-sizing: border-box;
 }
@@ -18,10 +17,10 @@
 
 #social{
   padding-top: 0;
-  background-color: red;
+  background-color: white;
   display: block;
   margin-top: 0;
-  padding-bottom: 70px;
+  padding-bottom: 50px;
 }
 
 ul > li{
@@ -132,7 +131,7 @@ footer .fa-heart{
 
 @media(min-width: 400px){
   #navbar{
-    postion: relative;
+    position: relative;
   }
 }
         </style>
