--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ footer .fa-heart{
       <li><a id="profile-link" href="https://github.com/alimalim77" target="_blank"><i class="fab fa-github"></i></a></li>
       <li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
     </ul>
-    <div id="googleMap" style="width:100%;height:400px;">
+    <div id="googleMap" style="width:100%;height:400px; display:block">
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3574.7839956471666!2d80.43400101408513!3d26.365847589766823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399c42168d83c455%3A0x464480de38dc4686!2sAllenhouse%20Institute%20of%20Technology%20%7C%20Engineering%20College%20in%20Kanpur%20%7C%20Best%20Engineering%20College%20in%20Kanpur%20%7C%20Top%20Engineering%20College%20in%20Kanpur!5e0!3m2!1sen!2sin!4v1634029509108!5m2!1sen!2sin" width="600" height="450" style="border:0; " allowfullscreen="" loading="lazy"></iframe>
  </div>
   </section>     
