--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     
     <!--Detail of subjects-->
   <br>
-    <section class="section reveal" id="portfolio">
+    <section class="section reveal bottomer" id="portfolio">
       <div class="container">
         <span class="main-card">
           Scored 78% in PCM. Represented School in City-Based Basketball Tournament
@@ -221,12 +221,13 @@
   <!-- Portfolio Section -->
 
   <section class="section animate__animated animate__slideInUp" id="portfolio">
-    <div class="container">
+    <div class="container topper" >
       <div class="section__header section__header--center">
         <h2 class="section__title">Portfolio</h2>
         <p class="section__subtitle">See my latest work</p> 
       </div>
       <div class="portfolio">
+        
         <div class="portfolio__box">
           <div class="portfolio__img">
             <img src="assets/portfolio-01.png" alt="Portfolio Items" />
