--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
             <a class="portfolio__link" href="#">See Work <i class="bi bi-arrow-right"></i></a>
           </div>
         </div>
-        <!--<div class="portfolio__box">-->
-          <div class="portfolio__img">
+        <div class="portfolio__box ">
+          <div class="#portfolio__img">
             <img style="max-height: 350px;" src="assets/portfolio-02.jpg" alt="Portfolio Items" />
           </div>
           <div class="portfolio__info">
@@ -261,7 +261,7 @@
             </p>
             <a class="portfolio__link" href="#">See Work <i class="bi bi-arrow-right"></i></a>
           </div>
-        <!--</div>-->
+        </div>
         <div class="portfolio__box">
           <div class="portfolio__img">
             <img src="assets/portfolio-04.jpg" alt="Portfolio Items" />
