Contact Button Included
API Plugin for Chat

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
       font-size: 2em;
     }
   </style>
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+  
+  
   <link rel="stylesheet" href="imagefloater.css">
   <script>
     var TxtRotate = function (el, toRotate, period) {
@@ -299,7 +302,7 @@
         </div> -->
     </div>
   </section>
-
+  <div class="elfsight-app-2171d55e-d7b2-42f7-95f1-15f22e4407f6"></div>
   <!-- About Me Section -->
   <section class="section" id="about">
     <div class="container">
