--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     
     <!--Detail of subjects-->
   
-    <section class="section reveal " id="portfolio">
+    <section class="container" id="portfolio">
       <center><img style="max-width: 80px; max-height: 80px;" src="icons/Graduate_Man.gif"></center>
       <br><br><br>
       <br>
