--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@
           <div>
             <ul class="social">
               <li>
-                <a href="www.linkedin.com/alimalim77"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/alimalim77"><i class="bi bi-linkedin"></i></a>
               </li>
               <li>
-                <a href="www.github.com/alimalim77"><i class="bi bi-github"></i></a>
+                <a href="https://www.github.com/alimalim77"><i class="bi bi-github"></i></a>
               </li>
               <li>
-                <a href="www.twitter.com/ohstunningbloke"><i class="bi bi-twitter"></i></a>
+                <a href="https://www.twitter.com/gumsandsneakers"><i class="bi bi-twitter"></i></a>
               </li>
               <li>
                 <a href="#"><i class="bi bi-chat-square-quote"></i></a>
@@ -218,7 +218,7 @@
         </span>
         <span style="margin-left: 100px;"></span>
         <span class="main-card">
-          8.1 CGPA until 6th semester
+          7.98 CGPA until 6th semester
           <div class="up-card">
             2019-23
           </div>
@@ -394,13 +394,13 @@
             <p>Follow Me:</p>
             <ul class="social">
               <li>
-                <a href="www.linkedin.com/alimalim77"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/alimalim77"><i class="bi bi-linkedin"></i></a>
               </li>
               <li>
-                <a href="www.github.com/alimalim77"><i class="bi bi-github"></i></a>
+                <a href="https://www.github.com/alimalim77"><i class="bi bi-github"></i></a>
               </li>
               <li>
-                <a href="www.twitter.com/ohstunningbloke"><i class="bi bi-twitter"></i></a>
+                <a href="https://www.twitter.com/gumsandsneakers"><i class="bi bi-twitter"></i></a>
               </li>
               <!-- <li>
                 <a href="#"><i class="bi bi-facebook"></i></a>
