--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
           <div class="portfolio__info" >
             <h3 class="portfolio__title">Divine Experience</h3>
             <p class="portfolio__content" style="color: black;">
-              Made Youtube videos from scratch in Pyhton Programming language with positive feedback from beginnner
+              Made Youtube videos from scratch in Python Programming language with positive feedback from beginnner
               level audience. Expanding the collection with time and would like to create more content on Python and
               Javascript in future.
             </p>
