--- a/index.html
+++ b/index.html
@@ -339,10 +339,10 @@
             <p class="section__subtitle">Few things about me</p>
           </div>
           <p class="about__bio" style="color: whitesmoke; font-weight: bolder;">
-            I am currently pursuing my pre-final year of graduation from Computer cience And Engineering and seeking for
-            for oportunities in Web Development and Data Analytics (or perhaps Web scraping). I am an avid fan of non-fiction
+            Currently in final year of graduation from Computer cience And Engineering and seeking for
+            for oportunities in Web Development and Data Analytics. I am an avid fan of non-fiction
             and fantasy books. My extra-curriculars involve being a part-time basketball player for my school and club in teenage years
-            and I love listening to R&B Music
+            and I love listening to R&B Music.
            </p>
           <h4 class="about__skillsTitle">Skills</h4>
           <ul class="about__skillsList">
