--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <div class="container">
         <h1 class="header__logo">
           <div class="imagefloat" style="max-width: 60px; max-height: 65px;">
-          <img  src="icons/avatar.jpg">
+          <img  src="icons/avatar.png">
           </div>
         </h1>
         <nav class="navigation">
