--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="animate__animated animate__slideInDown">
       <div class="container">
         <h1 class="header__logo">
-          <div class="imagefloat" style="max-width: 120px; max-height: 120px;">
+          <div class="imagefloat" style="width: 120px; height: 120px;">
           <img  src="icons/avatar.png">
           </div>
         </h1>
