--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
             <li><a href="#contact">Contact</a></li>
 
           </ul>
-          <a class="btn btn--main" href="assets/Resume_Mohammad_Alim.docx" download>
+          <a class="btn btn--main" href="assets/Resume.docx" download>
             <i class="bi bi-download"></i> Resume
           </a>
         </nav>
         <div class="header__resume">
-          <a class="btn btn--main" href="assets/Resume_Mohammad_Alim.docx" download>
+          <a class="btn btn--main" href="assets/Resume.docx" download>
             <i class="bi bi-download"></i> Resume
           </a>
         </div>
