--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
           <div class="portfolio__info">
             <h3 class="portfolio__title">Three dots</h3>
             <p class="portfolio__content">
-              The only way out is to contribute somtehting each day and hope for the wheel of luck to swing in your favor 
+              The only way out is to contribute somtething each day and hope for the wheel of luck to swing in your favor 
               which only occurs when you have a sheer determination to do so. One of the many lines I live by in my life.
             </p>
             <!--<a class="portfolio__link" href="#">See Work <i class="bi bi-arrow-right"></i></a>-->
@@ -340,7 +340,7 @@
           </div>
           <p class="about__bio" style="color: whitesmoke; font-weight: bolder;">
             Currently in final year of graduation from Computer cience And Engineering and seeking for
-            for oportunities in Web Development and Data Analytics. I am an avid fan of non-fiction
+            for oportunities in Full Stack Development and Data Analytics. I am an avid fan of non-fiction
             and fantasy books. My extra-curriculars involve being a part-time basketball player for my school and club in teenage years
             and I love listening to R&B Music.
            </p>
@@ -348,6 +348,7 @@
           <ul class="about__skillsList">
             <li>Python</li>
             <li>Flask</li>
+            <li>Streamlit</li>
             <li>JavaScript</li>
             <li>React</li>
             <li>Figma</li>
