--- a/index.html
+++ b/index.html
@@ -306,13 +306,12 @@
         </div>
         <div class="portfolio__box">
           <div class="portfolio__img">
-            <img  src="assets/portfolio-04.png" alt="Portfolio Items" />
+            <img  src="assets/contri.jpg" alt="Portfolio Items" />
           </div>
           <div class="portfolio__info">
             <h3 class="portfolio__title">Three dots</h3>
             <p class="portfolio__content">
-              The only way out is to contribute somtething each day and hope for the wheel of luck to swing in your favor 
-              which only occurs when you have a sheer determination to do so. One of the many lines I live by in my life.
+              Created lectures, blogs, educational content related to development and programming with consistency. 
             </p>
             <!--<a class="portfolio__link" href="#">See Work <i class="bi bi-arrow-right"></i></a>-->
           </div>
