--- a/index.html
+++ b/index.html
@@ -311,9 +311,9 @@
           <div class="portfolio__info">
             <h3 class="portfolio__title">Three dots</h3>
             <p class="portfolio__content">
-              Created lectures, blogs, educational content related to development and programming with consistency. 
+              Created lectures, blogs, educational content related to development and programming with consistency. Topics include Python, Data Structures and Algorithms, Competetive Programming etc. Interacted with students to provide according to the demands of current software industry.
             </p>
-            <!--<a class="portfolio__link" href="#">See Work <i class="bi bi-arrow-right"></i></a>-->
+            <a class="portfolio__link" href="https://alimalim77.medium.com/technical-published-works-d4a5d34ed49e">See Work <i class="bi bi-arrow-right"></i></a>
           </div>
         </div>
       </div>
