--- a/index.html
+++ b/index.html
@@ -264,16 +264,14 @@
         
         <div class="portfolio__box">
           <div class="portfolio__img ">
-            <img src="assets/portfolio-01.png" alt="Portfolio Items" />
+            <img src="assets/contri.jpg" alt="Portfolio Items" />
           </div>
           <div class="portfolio__info">
-            <h3 class="portfolio__title">Published Answers of Daily Challenge</h3>
+            <h3 class="portfolio__title">Contribution towards the learners</h3>
             <p class="portfolio__content">
-              Often told to be one of the best resource available on Internet to prepare for the interviews.
-              The Daily Challenge on Leetcode has helped students across the world to maintain their problem solving
-              consistency. I have published breakdown of questions so that they can be understood with best tactical approach.
+              Created lectures, blogs, educational content related to development and programming with consistency. Topics include Python, Data Structures and Algorithms, Competetive Programming etc. Interacted with students to provide according to the demands of current software industry.
             </p>
-            <a class="portfolio__link" href="#">See Work <i class="bi bi-arrow-right"></i></a>
+            <a class="portfolio__link" href="https://alimalim77.medium.com/technical-published-works-d4a5d34ed49e">See Work <i class="bi bi-arrow-right"></i></a>
           </div>
         </div>
         <div class="portfolio__box ">
@@ -306,14 +304,19 @@
         </div>
         <div class="portfolio__box">
           <div class="portfolio__img">
-            <img  src="assets/contri.jpg" alt="Portfolio Items" />
+            <img  src="assets/portfolio-01.png" alt="Portfolio Items" />
           </div>
           <div class="portfolio__info">
-            <h3 class="portfolio__title">Three dots</h3>
+            <h3 class="portfolio__title">
+              Published Answers of Daily Challenge
+            </h3>
             <p class="portfolio__content">
-              Created lectures, blogs, educational content related to development and programming with consistency. Topics include Python, Data Structures and Algorithms, Competetive Programming etc. Interacted with students to provide according to the demands of current software industry.
+              
+              Often told to be one of the best resource available on Internet to prepare for the interviews.
+              The Daily Challenge on Leetcode has helped students across the world to maintain their problem solving
+              consistency. I have published breakdown of questions so that they can be understood with best tactical approach.
             </p>
-            <a class="portfolio__link" href="https://alimalim77.medium.com/technical-published-works-d4a5d34ed49e">See Work <i class="bi bi-arrow-right"></i></a>
+            <a class="portfolio__link" href="">See Work <i class="bi bi-arrow-right"></i></a>
           </div>
         </div>
       </div>
