--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             <a class="portfolio__link" href="#">See Work <i class="bi bi-arrow-right"></i></a>
           </div>
         </div>
-        <div class="portfolio__box">
+        <!-- <div class="portfolio__box">
           <div class="portfolio__img">
             <img  src="assets/portfolio-01.png" alt="Portfolio Items" />
           </div>
@@ -319,7 +319,7 @@
             <a class="portfolio__link" href="">See Work <i class="bi bi-arrow-right"></i></a>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- <div class="section__footer">
           <a href="#contact">
             Ask for More Projects
