--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
             <p class="section__subtitle">Few things about me</p>
           </div>
           <p class="about__bio" style="color: whitesmoke; font-weight: bolder;">
-            Currently in final year of graduation from Computer cience And Engineering and seeking for
+            Currently in final year of graduation from Computer Science And Engineering and seeking for
             for oportunities in Full Stack Development and Data Analytics. I am an avid fan of non-fiction
             and fantasy books. My extra-curriculars involve being a part-time basketball player for my school and club in teenage years
             and I love listening to R&B Music.
