--- a/index.html
+++ b/index.html
@@ -342,9 +342,8 @@
           </div>
           <p class="about__bio" style="color: whitesmoke; font-weight: bolder;">
             Currently in final year of graduation from Computer Science And Engineering and seeking for
-            oportunities in Full Stack Development and Data Analytics. I am an avid fan of non-fiction
-            and fantasy books. My extra-curriculars involve being a part-time basketball player for my school and club in teenage years
-            and I love listening to R&B Music.
+            oportunities in Full Stack Development and Data Analytics. An avid fan of non-fiction
+            and fantasy books. Extra-curriculars involve being a part-time basketball player and loves listening to R&B Music.
            </p>
           <h4 class="about__skillsTitle">Skills</h4>
           <ul class="about__skillsList">
